Tmux: Update config with big improvements
- Unbind all unused keys
- Custom Vi-like keybinds for copy mode
- Better mouse mode support
- Clean up most of config file

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,9 +1,79 @@
-##############################
-###   TMUX CONFIGURATION   ###
-##############################
 
-### Appearance ###
+# ████████╗███╗   ███╗██╗   ██╗██╗  ██╗
+# ╚══██╔══╝████╗ ████║██║   ██║╚██╗██╔╝
+#    ██║   ██╔████╔██║██║   ██║ ╚███╔╝
+#    ██║   ██║╚██╔╝██║██║   ██║ ██╔██╗
+#    ██║   ██║ ╚═╝ ██║╚██████╔╝██╔╝ ██╗
+#    ╚═╝   ╚═╝     ╚═╝ ╚═════╝ ╚═╝  ╚═╝
 
+
+######################################
+###   Clear all default keybinds   ###
+######################################
+unbind -a
+unbind -a -T prefix
+unbind -a -T root
+unbind -a -T copy-mode
+unbind -a -T copy-mode-vi
+
+# Prefix / command key combo
+set -g prefix M-w
+
+
+##################################
+###   Set Copy Mode keybinds   ###
+##################################
+# Explicitly set Vi keybinds
+set -g mode-keys vi
+
+# Reload Tmux with Alt + r
+bind M-r source-file ~/.config/tmux/tmux.conf
+
+# Enter Copy Mode with Prefix + Space, and leave with Esc
+bind Space copy-mode
+bind -T copy-mode-vi Escape send -X cancel
+set -g escape-time 1    # Skip standard wait for escape sequences
+
+# Vi navigation, select, and yank keybinds
+bind -T copy-mode-vi Up     send -X cursor-up
+bind -T copy-mode-vi Down   send -X cursor-down
+bind -T copy-mode-vi Left   send -X cursor-left
+bind -T copy-mode-vi Right  send -X cursor-right
+bind -T copy-mode-vi v      if -F "#{selection_present}" { send -X clear-selection } { send -X begin-selection }
+bind -T copy-mode-vi y      send -X copy-selection
+bind -T copy-mode-vi Enter  send -X copy-selection-and-cancel
+
+
+#########################
+###   Mouse Support   ###
+#########################
+set -g mouse on
+
+# Enter Copy Mode on Scroll Up, leave before scrolling past the bottom
+bind -n WheelUpPane copy-mode -e
+
+# The actual Scroll Up/Down bindings
+bind -T copy-mode-vi WheelUpPane   send -X -N 5 scroll-up
+bind -T copy-mode-vi WheelDownPane send -X -N 5 scroll-down
+
+# Enter Copy Mode and begin selection on click + drag, copy on release
+bind -n MouseDrag1Pane copy-mode -M
+bind -T copy-mode-vi MouseDrag1Pane    send -X begin-selection
+bind -T copy-mode-vi MouseDragEnd1Pane send -X copy-selection-no-clear
+
+
+############################
+###   General Settings   ###
+############################
+
+# Set scrollback buffer to 50000 lines
+set -g history-limit 50000
+
+
+######################
+###   Appearance   ###
+######################
+# Color definitions
 BLACK='#282C34'
 DGRAY='#4B5263'
 LGRAY='#5C6370'
@@ -15,11 +85,8 @@ MAGENTA='#C678DD'
 CYAN='#56B6C2'
 WHITE='#ABB2BF'
 
-# Improve colors
+# Improve colors by setting term type
 set -g default-terminal 'xterm-256color'
-
-# Set scrollback buffer to 10000
-set -g history-limit 10000
 
 # Customize the status line
 set -g status-style bg=$BLACK,fg=$WHITE
@@ -31,15 +98,9 @@ setw -g window-status-current-style bg=$DGRAY,fg=$WHITE,bold
 setw -g window-status-current-format " #[fg=$BLUE]#I#[fg=$WHITE]:#[fg=$WHITE]#W#[fg=$BLUE]#F "
 
 
-###   Key Bindings   ###
-
-# remap prefix from 'C-b' to 'C-s'
-unbind C-b
-set-option -g prefix C-s
-bind-key C-s send-prefix
-
-# reload config file (change file location to your the tmux.conf you want to use)
-bind r source-file ~/.tmux.conf
+###################################
+###   Additional Key Bindings   ###
+###################################
 
 # switch panes using Alt-arrow without prefix
 bind -n M-Left select-pane -L
@@ -50,15 +111,6 @@ bind -n M-Down select-pane -D
 # split panes using | and -
 bind | split-window -h
 bind - split-window -v
-unbind '"'
-unbind %
-
-set -g mouse on
-# sane scrolling:
-bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e; send-keys -M'"
-
-# Sane scrolling
-#set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
 # don't rename windows automatically
 set-option -g allow-rename off
