Tmux: Add window navigation keybinds

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -5,29 +5,39 @@
 #    ██║   ██║╚██╔╝██║██║   ██║ ██╔██╗
 #    ██║   ██║ ╚═╝ ██║╚██████╔╝██╔╝ ██╗
 #    ╚═╝   ╚═╝     ╚═╝ ╚═════╝ ╚═╝  ╚═╝
+################################################################################
 
 
 ######################################
 ###   Clear all default keybinds   ###
-######################################
+################################################################################
 unbind -a
 unbind -a -T prefix
 unbind -a -T root
 unbind -a -T copy-mode
 unbind -a -T copy-mode-vi
 
+
+############################
+###   General Settings   ###
+################################################################################
+
 # Prefix / command key combo
 set -g prefix M-w
+
+# Set scrollback buffer to 50000 lines
+set -g history-limit 50000
+
+# Reload Tmux with Alt + r
+bind M-r source-file ~/.config/tmux/tmux.conf
 
 
 ##################################
 ###   Set Copy Mode keybinds   ###
-##################################
+################################################################################
+
 # Explicitly set Vi keybinds
 set -g mode-keys vi
-
-# Reload Tmux with Alt + r
-bind M-r source-file ~/.config/tmux/tmux.conf
 
 # Enter Copy Mode with Prefix + Space, and leave with Esc
 bind Space copy-mode
@@ -62,17 +72,9 @@ bind -T copy-mode-vi MouseDrag1Pane    send -X begin-selection
 bind -T copy-mode-vi MouseDragEnd1Pane send -X copy-selection-no-clear
 
 
-############################
-###   General Settings   ###
-############################
-
-# Set scrollback buffer to 50000 lines
-set -g history-limit 50000
-
-
 ######################
 ###   Appearance   ###
-######################
+################################################################################
 # Color definitions
 BLACK='#282C34'
 DGRAY='#4B5263'
@@ -97,10 +99,37 @@ setw -g window-status-format " #[fg=$DGRAY]#I#[fg=$DGRAY]:#[fg=$LGRAY]#W#[fg=$DG
 setw -g window-status-current-style bg=$DGRAY,fg=$WHITE,bold
 setw -g window-status-current-format " #[fg=$BLUE]#I#[fg=$WHITE]:#[fg=$WHITE]#W#[fg=$BLUE]#F "
 
+# Use a second, blank bar to keep space between the bar and terminal output
+#set -Fg 'status-format[1]' '#{status-format[0]}'
+#set -g 'status-format[0]' ''
+#set -g status 2
 
-###################################
-###   Additional Key Bindings   ###
-###################################
+
+###################
+###   Windows   ###
+################################################################################
+# don't rename windows automatically
+set-option -g allow-rename off
+
+# Make windows and panes start from 1 instead of 0
+set -g base-index 1
+setw -g pane-base-index 1
+
+# Keybinds
+bind -n M-1     select-window -t 1
+bind -n M-2     select-window -t 2
+bind -n M-3     select-window -t 3
+bind -n M-4     select-window -t 4
+bind -n M-5     select-window -t 5
+bind -n M-6     select-window -t 6
+bind -n M-7     select-window -t 7
+bind -n M-8     select-window -t 8
+bind -n M-9     select-window -t 9
+
+
+#################
+###   Panes   ###
+################################################################################
 
 # switch panes using Alt-arrow without prefix
 bind -n M-Left select-pane -L
@@ -112,14 +141,7 @@ bind -n M-Down select-pane -D
 bind | split-window -h
 bind - split-window -v
 
-# don't rename windows automatically
-set-option -g allow-rename off
 
-# Make windows and panes start from 1 instead of 0
-set -g base-index 1
-setw -g pane-base-index 1
-
-# Use a second, blank bar to keep space between the bar and terminal output
-#set -Fg 'status-format[1]' '#{status-format[0]}'
-#set -g 'status-format[0]' ''
-#set -g status 2
+################################
+###   End Tmux config file   ###
+################################################################################
