Add ServerAliveInterval to SSH client config

--- a/.ssh/config
+++ b/.ssh/config
@@ -3,6 +3,7 @@ AddKeysToAgent yes
 
 # Set rules for all hosts
 Host *
+    ServerAliveInterval 60
     AddressFamily inet
     Compression no
     ControlMaster auto
