--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -1,7 +1,7 @@
 [{
-    "layer": "top", // Waybar at top layer
+    "layer": "bottom", // Waybar at top layer
     "position": "top", // Waybar position (top|bottom|left|right)
-    "height": 32, // Waybar height (to be removed for auto height)
+    "height": 38, // Waybar height (to be removed for auto height)
 
     // Choose the order of the modules
     "modules-left": ["mpd"],
@@ -114,9 +114,9 @@
         "on-click": "pavucontrol"
     }
 }, {
-    "layer": "top", // Waybar at top layer
+    "layer": "bottom", // Waybar at top layer
     "position": "bottom", // Waybar position (top|bottom|left|right)
-    "height": 32, // Waybar height (to be removed for auto height)
+    "height": 38, // Waybar height (to be removed for auto height)
 
     // Choose the order of the modules
     "modules-left": ["custom/dwl_tag#0", "custom/dwl_tag#1", "custom/dwl_tag#2", "custom/dwl_tag#3", "custom/dwl_tag#4", "custom/dwl_tag#5"],
