Implement ssh-agent/bitwarden integration in shell

--- a/.ssh/.gitignore
+++ b/.ssh/.gitignore
@@ -2,7 +2,7 @@
 ###   GIT IGNORE   ###
 ######################
 
-# Ignore all files and directories
+# Ignore all files and directories by default
 *
 
 # Include this .gitignore file
@@ -10,3 +10,6 @@
 
 # Include SSH client config file
 !config
+
+# Include get-pass.sh script
+!get-pass.sh
