Fix: Colors in Vim and Tmux
- Enable TrueColor support in Tmux
- Enable TrueColor support in Vim when running in a Tmux session
- Fix comment colors in Vim OneDark when running in a Tmux session

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -90,6 +90,9 @@ WHITE='#ABB2BF'
 # Improve colors by setting term type
 set -g default-terminal 'xterm-256color'
 
+# Set TrueColor
+set -as terminal-overrides ",xterm*:Tc"
+
 # Customize the status line
 set -g status-style bg=$BLACK,fg=$WHITE
 
