Explicitly define a default SSH key

--- a/.ssh/config
+++ b/.ssh/config
@@ -3,6 +3,7 @@ AddKeysToAgent yes
 
 # Set rules for all hosts
 Host *
+    IdentityFile ~/.ssh/id_ed25519
     ServerAliveInterval 60
     AddressFamily inet
     Compression no
