(Wayland) Finalize switch to Hyprland

--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -2,7 +2,7 @@
 preload = ~/Pictures/wallpaper/1-single/marshmello-space.jpg
 
 # Wallpapers to be applied by default
-wallpaper = eDP-1,~/Pictures/wallpaper/1-single/marshmello-space.jpg
+wallpaper = DP-1,~/Pictures/wallpaper/1-single/marshmello-space.jpg
 
 # Disable IPC unless needed
 ipc = off
