--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -3,7 +3,9 @@
 #
 # Refer to the wiki for more information.
 
-monitor=,1366x768@60,0x0,1
+monitor=DP-1,1920x1080@144,0x0,1
+#monitor=HDMI-A-1,1920x1080@60,1920x0,1
+monitor=HDMI-A-1,disable
 workspace=DP-1,1
 
 input {
@@ -51,7 +53,9 @@ dwindle {
     preserve_split=1
 }
 
-# example window rules
+########################
+###   WINDOW RULES   ###
+########################
 # for windows named/classed as abc and xyz
 #windowrule=move 69 420,abc
 #windowrule=size 420 69,abc
@@ -59,7 +63,10 @@ dwindle {
 #windowrule=float,abc
 #windowrule=pseudo,abc
 #windowrule=monitor 0,xyz
-
+windowrule=workspace 2,title:^(Firefox)(.*)$
+windowrule=center,^(Steam)$
+windowrule=minsize 800 600,^(Steam)$
+windowrule=fullscreen,^(gamescope)$
 
 ####################
 ###   KEYBINDS   ###
@@ -68,10 +75,11 @@ dwindle {
 bind=SUPER,Return,exec,alacritty
 bind=SUPER,Q,killactive,
 bind=SUPERSHIFT,Q,exit,
-bind=SUPER,E,exec,wofi --show drun
+bind=SUPER,E,exec,wofi --show drun --gtk-dark
 bind=SUPER,V,togglefloating,
 bind=SUPER,P,pseudo,
 bind=SUPER,L,exec,waylock
+bind=SUPER,F,fullscreen
 
 # Window focus
 bind=SUPER,left,movefocus,l
@@ -108,9 +116,25 @@ bind=,XF86AudioLowerVolume,exec,amixer -q set Master 5%-
 bind=,XF86AudioRaiseVolume,exec,amixer -q set Master 5%+
 
 
+######################
+###   WORKSPACES   ###
+######################
+wsbind = 1,DP-1
+wsbind = 2,DP-1
+wsbind = 3,DP-1
+wsbind = 4,DP-1
+wsbind = 5,DP-1
+wsbind = 6,DP-1
+wsbind = 7,DP-1
+wsbind = 8,DP-1
+wsbind = 9,HDMI-A-1
+
+
 #####################
 ###   Autostart   ###
 #####################
 exec-once=hyprpaper
 exec-once=waybar
 exec-once=dunst
+exec-once=mpd
+exec-once=sh -c "ssh-agent -D -a $XDG_RUNTIME_DIR/ssh-agent.socket"
