--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -135,4 +135,6 @@ exec-once=hyprpaper
 exec-once=waybar
 exec-once=dunst
 exec-once=mpd
+# Don't use '-w' switch for swayidle, to avoid issues caused by blocking
+exec-once=swayidle
 exec-once=sh -c "ssh-agent -D -a $XDG_RUNTIME_DIR/ssh-agent.socket"
