Add idle inhibitor to waybar

--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -35,13 +35,6 @@
         "tooltip-format": "MPD (connected)",
         "tooltip-format-disconnected": "MPD (disconnected)"
     },
-    "idle_inhibitor": {
-        "format": "{icon}",
-        "format-icons": {
-            "activated": "",
-            "deactivated": ""
-        }
-    },
     "clock": {
         // "timezone": "America/New_York",
         "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
@@ -117,7 +110,7 @@
     // Choose the order of the modules
     "modules-left": ["wlr/workspaces"],
     "modules-center": ["hyprland/window"],
-    "modules-right": ["tray"],
+    "modules-right": ["tray", "idle_inhibitor"],
     // Modules configuration
     "wlr/workspaces": {
         "format": "{icon}",
@@ -140,5 +133,13 @@
     "tray": {
         "icon-size": 24,
         "spacing": 10
+    },
+    "idle_inhibitor": {
+        "format": "{icon}",
+        "format-icons": {
+            "activated": "",
+            "deactivated": ""
+        },
+        "timeout": "20"
     },
 }]
