Make default Hyprland config more generic

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,12 +1,16 @@
-# This is an example Hyprland config file.
-# Syntax is the same as in Hypr, but settings might differ.
-#
-# Refer to the wiki for more information.
+###############################################################################
+###   ██╗  ██╗██╗   ██╗██████╗ ██████╗ ██╗      █████╗ ███╗   ██╗██████╗    ###
+###   ██║  ██║╚██╗ ██╔╝██╔══██╗██╔══██╗██║     ██╔══██╗████╗  ██║██╔══██╗   ###
+###   ███████║ ╚████╔╝ ██████╔╝██████╔╝██║     ███████║██╔██╗ ██║██║  ██║   ###
+###   ██╔══██║  ╚██╔╝  ██╔═══╝ ██╔══██╗██║     ██╔══██║██║╚██╗██║██║  ██║   ###
+###   ██║  ██║   ██║   ██║     ██║  ██║███████╗██║  ██║██║ ╚████║██████╔╝   ###
+###   ╚═╝  ╚═╝   ╚═╝   ╚═╝     ╚═╝  ╚═╝╚══════╝╚═╝  ╚═╝╚═╝  ╚═══╝╚═════╝    ###
+###############################################################################
 
-monitor=DP-1,1920x1080@144,0x0,1
-#monitor=HDMI-A-1,1920x1080@60,1920x0,1
-monitor=HDMI-A-1,disable
-workspace=DP-1,1
+# Refer to https://wiki.hyprland.org for more information.
+
+# Generic rule to 'soft-mirror' all displays at their preferred resolution/rate
+monitor=,preferred,0x0,1
 
 input {
     kb_layout=
@@ -62,8 +66,6 @@ dwindle {
 #windowrule=pseudo,abc
 #windowrule=monitor 0,xyz
 windowrule=workspace 2,title:^(Firefox)(.*)$
-windowrule=center,^(Steam)$
-windowrule=minsize 800 600,^(Steam)$
 windowrule=fullscreen,^(gamescope)$
 
 ####################
@@ -112,20 +114,6 @@ bind=SUPERSHIFT,0,movetoworkspace,10
 bind=,XF86AudioMute,exec,amixer -q set Master toggle
 bind=,XF86AudioLowerVolume,exec,amixer -q set Master 5%-
 bind=,XF86AudioRaiseVolume,exec,amixer -q set Master 5%+
-
-
-######################
-###   WORKSPACES   ###
-######################
-wsbind = 1,DP-1
-wsbind = 2,DP-1
-wsbind = 3,DP-1
-wsbind = 4,DP-1
-wsbind = 5,DP-1
-wsbind = 6,DP-1
-wsbind = 7,DP-1
-wsbind = 8,DP-1
-wsbind = 9,HDMI-A-1
 
 
 #####################
