--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -20,30 +20,28 @@ input {
     kb_rules=
 
     follow_mouse=1
+
+    touchpad {
+        disable_while_typing=true
+    }
 }
 
 general {
     sensitivity=1.00
-    main_mod=SUPER
+    apply_sens_to_raw=0  # do not apply the sensitivity to raw input (e.g. games)
 
     gaps_in=5
     gaps_out=10
     border_size=2
     col.active_border=0x5c637000
-
     col.inactive_border=0x3e445200
-
-    apply_sens_to_raw=0 # do not apply the sensitivity to raw input (e.g. used by games where you aim)
 }
 
 decoration {
-    rounding=9
-    blur=0
-    blur_size=3 # minimum 1
-    blur_passes=1 # minimum 1, more passes = more resource intensive.
-    # Your blur "amount" is blur_size * blur_passes, but high blur_size (over around 5-ish) will produce artifacts.
-    # if you want heavy blur, you need to up the blur_passes.
-    # the more passes, the more you can up the blur_size without noticing artifacts.
+    rounding=9      # Use an odd value here for perfect symmetry.
+    blur=0          # 0 to disable, 1 to enable.
+    blur_size=3     # Minimum 1, high values (5+) may cause artifacts.
+    blur_passes=1   # Minimum 1, more passes = more resource intensive.
 }
 
 animations {
