--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -1,5 +1,5 @@
 [{
-    "layer": "bottom", // Waybar at top layer
+    "layer": "top", // Waybar at top layer
     "position": "top", // Waybar position (top|bottom|left|right)
     "height": 32, // Waybar height (to be removed for auto height)
 
@@ -103,7 +103,7 @@
         "on-click": "pavucontrol"
     }
 }, {
-    "layer": "bottom", // Waybar at top layer
+    "layer": "top", // Waybar at top layer
     "position": "bottom", // Waybar position (top|bottom|left|right)
     "height": 38, // Waybar height (to be removed for auto height)
 
