--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -74,7 +74,7 @@ windowrule=fullscreen,^(gamescope)$
 bind=SUPER,Return,exec,alacritty
 bind=SUPER,Q,killactive,
 bind=SUPERSHIFT,Q,exit,
-bind=SUPER,E,exec,wofi --show drun --gtk-dark
+bind=SUPER,E,exec,wofi 
 bind=SUPER,V,togglefloating,
 bind=SUPER,P,pseudo,
 bind=SUPER,L,exec,waylock
