Hyprland: Add binds for window move/resize

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -86,6 +86,10 @@ bind=SUPER,right,movefocus,r
 bind=SUPER,up,movefocus,u
 bind=SUPER,down,movefocus,d
 
+# Window Move and Resize
+bindm=SUPER,mouse:272,movewindow      # Left Mouse
+bindm=SUPER,mouse:273,resizewindow    # Right Mouse
+
 # Workspaces
 bind=SUPER,1,workspace,1
 bind=SUPER,2,workspace,2
