--- a/.config/yadm/ansible/roles/gui/tasks/main.yml
+++ b/.config/yadm/ansible/roles/gui/tasks/main.yml
@@ -1,19 +1,17 @@
 ---
-- name: Install AUR packages
-  ansible.builtin.command: paru -S --needed --noconfirm hyprland
-  changed_when: false
-  loop:
-    - hyprland
-    - hyprpaper-git
-    - waybar-hyprland
-
 - name: Install repo packages
   community.general.pacman:
-    # TODO: Investigate the safety of this
-    # executable: /usr/bin/paru
     name:
       - alacritty
+      - hyprland
+      - hyprpaper
       - mpd
       - firefox
       - wofi
   become: false
+
+- name: Install waybar-hyprland from the AUR
+  community.general.pacman:
+    name: waybar-hyprland
+    executable: paru
+    become: false
