--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -74,7 +74,7 @@ windowrule=fullscreen,^(gamescope)$
 bind=SUPER,Return,exec,alacritty
 bind=SUPER,Q,killactive,
 bind=SUPERSHIFT,Q,exit,
-bind=SUPER,E,exec,wofi 
+bind=SUPER,E,exec,wofi
 bind=SUPER,V,togglefloating,
 bind=SUPER,P,pseudo,
 bind=SUPER,L,exec,waylock
@@ -118,6 +118,8 @@ bind=,XF86AudioMute,exec,amixer -q set Master toggle
 bind=,XF86AudioLowerVolume,exec,amixer -q set Master 5%-
 bind=,XF86AudioRaiseVolume,exec,amixer -q set Master 5%+
 
+# Screenshots and Recordings
+bind=SUPERSHIFT,R,exec,record_screen.sh
 
 #####################
 ###   Autostart   ###
