--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -37,21 +37,42 @@ general {
     col.inactive_border=0x3e445200
 }
 
+misc {
+    disable_hyprland_logo = true
+    disable_splash_rendering = true
+}
+
 decoration {
     rounding=9      # Use an odd value here for perfect symmetry.
     blur=0          # 0 to disable, 1 to enable.
     blur_size=3     # Minimum 1, high values (5+) may cause artifacts.
     blur_passes=1   # Minimum 1, more passes = more resource intensive.
+
+    drop_shadow = true
+    shadow_range = 4
+    shadow_render_power = 3
+    col.shadow = rgba(1a1a1aee)
 }
 
 animations {
-    enabled=0
+    enabled = true
+
+    # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
+
+    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
+
+    animation = windows, 1, 7, myBezier
+    animation = windowsOut, 1, 7, default, popin 80%
+    animation = border, 1, 10, default
+    animation = borderangle, 1, 8, default
+    animation = fade, 1, 7, default
+    animation = workspaces, 1, 6, default
 }
 
 dwindle {
-    pseudotile=0 # enable pseudotiling on dwindle
-    force_split=2 # Always split towards the right/bottom
-    preserve_split=1
+    pseudotile = false     # Initialize with pseudotiling off
+    force_split = 2        # Always split towards the right/bottom
+    preserve_split = true  # You probably want this on
 }
 
 ########################
@@ -76,7 +97,6 @@ bind=SUPER,Q,killactive,
 bind=SUPERSHIFT,Q,exit,
 bind=SUPER,E,exec,wofi
 bind=SUPER,V,togglefloating,
-bind=SUPER,P,pseudo,
 bind=SUPER,L,exec,waylock
 bind=SUPER,F,fullscreen
 
