--- a/.config/yadm/ansible/roles/gui/tasks/main.yml
+++ b/.config/yadm/ansible/roles/gui/tasks/main.yml
@@ -1,17 +1,3 @@
 ---
-- name: Install repo packages
-  community.general.pacman:
-    name:
-      - alacritty
-      - hyprland
-      - hyprpaper
-      - mpd
-      - firefox
-      - wofi
-  become: false
-
-- name: Install waybar-hyprland from the AUR
-  community.general.pacman:
-    name: waybar-hyprland
-    executable: paru
-    become: false
+- name: Include tasks
+  ansible.builtin.include_tasks: "packages/{{ ansible_distribution | lower }}.yml"
