--- a/.config/yadm/ansible/roles/ssh-client/tasks/main.yml
+++ b/.config/yadm/ansible/roles/ssh-client/tasks/main.yml
@@ -1,9 +1,6 @@
 ---
-- name: Ensure openssh package is installed
-  community.general.pacman:
-    name: openssh
-    state: present
-  become: false
+- name: Include tasks
+  ansible.builtin.include_tasks: "packages/{{ ansible_distribution | lower }}.yml"
 
 - name: Ensure SSH client socket directory exists
   ansible.builtin.file:
