feat(bootstrap): add audio configuration module

--- a/.config/yadm/ansible/playbook.yml
+++ b/.config/yadm/ansible/playbook.yml
@@ -8,6 +8,7 @@
     user: "{{ lookup('ansible.builtin.env', 'SUDO_USER') }}"
     home: "{{ lookup('ansible.builtin.env', 'HOME') }}"
   roles:
+    - audio
     - gui
     - neovim
     - ssh-client
