Update Hyprland config

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -44,9 +44,12 @@ misc {
 
 decoration {
     rounding=9      # Use an odd value here for perfect symmetry.
-    blur=0          # 0 to disable, 1 to enable.
-    blur_size=3     # Minimum 1, high values (5+) may cause artifacts.
-    blur_passes=1   # Minimum 1, more passes = more resource intensive.
+
+    blur {
+        enabled=0    # 0 to disable, 1 to enable.
+        size=3       # Minimum 1, high values (5+) may cause artifacts.
+        passes=1     # Minimum 1, more passes = more resource intensive.
+    }
 
     drop_shadow = true
     shadow_range = 4
@@ -134,9 +137,10 @@ bind=SUPERSHIFT,9,movetoworkspace,9
 bind=SUPERSHIFT,0,movetoworkspace,10
 
 # Media keys
+bind=,XF86AudioPlay,exec,mpc toggle
 bind=,XF86AudioMute,exec,amixer -q set Master toggle
-bind=,XF86AudioLowerVolume,exec,amixer -q set Master 5%-
-bind=,XF86AudioRaiseVolume,exec,amixer -q set Master 5%+
+binde=,XF86AudioLowerVolume,exec,amixer -q set Master 5%-
+binde=,XF86AudioRaiseVolume,exec,amixer -q set Master 5%+
 
 # Screenshots and Recordings
 bind=SUPERSHIFT,R,exec,record_screen.sh
