fix: Hyprland and Waybar config for aux monitor

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -9,8 +9,12 @@
 
 # Refer to https://wiki.hyprland.org for more information.
 
-# Generic rule to 'soft-mirror' all displays at their preferred resolution/rate
-monitor=,preferred,0x0,1
+# Keep the primary monitor at its highest refresh rate.
+monitor = DP-1,highrr,0x0,1
+
+# Keep a large buffer zone for the auxilliary, so that the mouse doesn't traverse displays.
+# Mouse can be switched to the aux display using workspace keybinds.
+monitor = HDMI-A-1,highres,3840x0,1
 
 input {
     kb_layout=
@@ -88,8 +92,12 @@ dwindle {
 #windowrule=float,abc
 #windowrule=pseudo,abc
 #windowrule=monitor 0,xyz
-windowrule=workspace 2,title:^(Firefox)(.*)$
+windowrule=workspace 2,^(firefox)$
 windowrule=fullscreen,^(gamescope)$
+
+# Fullscreen Discord on the auxilliary display
+windowrule=monitor 2,^(discord)$
+windowrule=fullscreen,^(discord)$
 
 ####################
 ###   KEYBINDS   ###
@@ -144,6 +152,19 @@ binde=,XF86AudioRaiseVolume,exec,amixer -q set Master 5%+
 
 # Screenshots and Recordings
 bind=SUPERSHIFT,R,exec,record_screen.sh
+bind=,Print,exec,grim
+
+###########################
+###   Workspace Rules   ###
+###########################
+
+# Bind workspace 0 to auxilliary monitor
+workspace=DP-1,1
+workspace=DP-1,2
+workspace=DP-1,3
+workspace=DP-1,4
+workspace=DP-1,5
+workspace=HDMI-A-1,10
 
 #####################
 ###   Autostart   ###
