fix(gui): add missing Arch packages to bootstrap

--- a/.config/yadm/ansible/roles/gui/tasks/packages/archlinux.yml
+++ b/.config/yadm/ansible/roles/gui/tasks/packages/archlinux.yml
@@ -6,6 +6,10 @@
       - hyprland
       - hyprpaper
       - mpd
+      - swayidle
       - waybar
+      - waylock
       - wofi
+      - xdg-desktop-portal-gtk
+      - xdg-desktop-portal-hyprland
   become: false
