--- a/.config/git/config
+++ b/.config/git/config
@@ -1,9 +1,16 @@
 [user]
 	name = Ryan Algar
-	email = 59636191+ralgar@users.noreply.github.com
+	email = me@ralgar.dev
+	signingkey = DBEBCFD1110F2CEA
 
 [color]
 	ui = auto
 
 [init]
 	defaultBranch = main
+
+[commit]
+	gpgSign = true
+
+[tag]
+	gpgSign = true
