--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -14,7 +14,7 @@ monitor = DP-1,highrr,0x0,1
 
 # Keep a large buffer zone for the auxilliary, so that the mouse doesn't traverse displays.
 # Mouse can be switched to the aux display using workspace keybinds.
-monitor = HDMI-A-1,highres,3840x0,1
+monitor = DP-2,highres,3840x0,1
 
 input {
     kb_layout=
@@ -164,7 +164,7 @@ workspace=DP-1,2
 workspace=DP-1,3
 workspace=DP-1,4
 workspace=DP-1,5
-workspace=HDMI-A-1,10
+workspace=DP-2,10
 
 #####################
 ###   Autostart   ###
