feat(ssh): update SSH config for FIDO2 keys

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -176,4 +176,6 @@ exec-once=dunst
 exec-once=mpd
 # Don't use '-w' switch for swayidle, to avoid issues caused by blocking
 exec-once=swayidle
-exec-once=sh -c "ssh-agent -D -a $XDG_RUNTIME_DIR/ssh-agent.socket"
+
+# Stsrt the SSH agent, if needed.
+#exec-once=sh -c "ssh-agent -D -a $XDG_RUNTIME_DIR/ssh-agent.socket"
