--- a/.ssh/config
+++ b/.ssh/config
@@ -1,9 +1,9 @@
 # Automatically add keys to ssh-agent
-AddKeysToAgent yes
+#AddKeysToAgent yes
 
 # Set rules for all hosts
 Host *
-    IdentityFile ~/.ssh/id_ed25519
+    #IdentityFile ~/.ssh/id_ed25519_sk
     ServerAliveInterval 60
     AddressFamily inet
     Compression no
