feat(hyprland): update various elements
- Changes notification manager to mako
- Increases drop shadow visibility
- Adds YubiKey Touch Detector

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -38,8 +38,8 @@ general {
     gaps_in=5
     gaps_out=10
     border_size=2
-    col.active_border=0x5c637000
-    col.inactive_border=0x3e445200
+    col.active_border=0xff5c6370
+    col.inactive_border=0xff3e4452
 }
 
 misc {
@@ -57,7 +57,7 @@ decoration {
     }
 
     drop_shadow = true
-    shadow_range = 4
+    shadow_range = 10
     shadow_render_power = 3
     col.shadow = rgba(1a1a1aee)
 }
@@ -109,7 +109,7 @@ bind=SUPER,Q,killactive,
 bind=SUPERSHIFT,Q,exit,
 bind=SUPER,E,exec,wofi
 bind=SUPER,V,togglefloating,
-bind=SUPER,L,exec,waylock
+bind=SUPER,L,exec,waylock -fork-on-lock
 bind=SUPER,F,fullscreen
 
 # Window focus
@@ -172,10 +172,12 @@ workspace=DP-2,10
 #####################
 exec-once=hyprpaper
 exec-once=waybar
-exec-once=dunst
+exec-once=mako
 exec-once=mpd
-# Don't use '-w' switch for swayidle, to avoid issues caused by blocking
-exec-once=swayidle
+exec-once=swayidle -w
+
+# Start the YubiKey Touch Detector daemon
+exec-once=yubikey-touch-detector --libnotify
 
 # Stsrt the SSH agent, if needed.
 #exec-once=sh -c "ssh-agent -D -a $XDG_RUNTIME_DIR/ssh-agent.socket"
