--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -109,7 +109,7 @@ bind=SUPER,Q,killactive,
 bind=SUPERSHIFT,Q,exit,
 bind=SUPER,E,exec,wofi
 bind=SUPER,V,togglefloating,
-bind=SUPER,L,exec,waylock -fork-on-lock
+bind=SUPER,L,exec,waylock
 bind=SUPER,F,fullscreen
 
 # Window focus
@@ -174,7 +174,9 @@ exec-once=hyprpaper
 exec-once=waybar
 exec-once=mako
 exec-once=mpd
-exec-once=swayidle -w
+
+# Do not invoke `swayidle` with `-w` switch, or it will behave poorly.
+exec-once=swayidle
 
 # Start the YubiKey Touch Detector daemon
 exec-once=yubikey-touch-detector --libnotify
