fix(hyprland): only screenshot the focused monitor

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -153,7 +153,7 @@ binde=,XF86AudioRaiseVolume,exec,amixer -q set Master 5%+
 
 # Screenshots and Recordings
 bind=SUPERSHIFT,R,exec,record_screen.sh
-bind=,Print,exec,grim
+bind=,Print,exec,grim -o $(hyprctl -j activeworkspace | jq -r .monitor)
 
 ###########################
 ###   Workspace Rules   ###
