fix(hyprland): add idle inhibit rule for fullscreen

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -86,15 +86,11 @@ dwindle {
 ########################
 ###   WINDOW RULES   ###
 ########################
-# for windows named/classed as abc and xyz
-#windowrule=move 69 420,abc
-#windowrule=size 420 69,abc
-#windowrule=tile,xyz
-#windowrule=float,abc
-#windowrule=pseudo,abc
-#windowrule=monitor 0,xyz
 windowrule=workspace 2,^(firefox)$
 windowrule=fullscreen,^(gamescope)$
+
+# Inhibit idle when the primary display has a fullscreen window
+windowrulev2 = idleinhibit focus,monitor: 1,fullscreen: 1
 
 # Fullscreen Discord on the auxilliary display
 windowrule=monitor 2,^(discord)$
