feat(hyprland): implement automatic color temp
- Color temperature ranges from 5700K during the day to 4500K at night
- Color temperature adjustments are disabled when gamemode is running

--- a/.config/gamemode.ini
+++ b/.config/gamemode.ini
@@ -88,8 +88,9 @@ inhibit_screensaver=1
 [custom]
 ; Custom scripts (executed using the shell) when gamemode starts and ends
 start=notify-send -u low "GameMode started"
-start=docker stop $(docker ps -aq)
+start=pkill --signal SIGUSR1 gammastep
 
+end=pkill --signal SIGUSR1 gammastep
 end=notify-send -u low "GameMode ended"
 
 ; Timeout for scripts (seconds). Scripts will be killed if they do not complete within this time.
