--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -168,8 +168,9 @@ workspace=DP-2,10
 #####################
 exec-once=hyprpaper
 exec-once=waybar
-exec-once=mako
 exec-once=mpd
+exec-once=gammastep
+exec-once=mako
 
 # Do not invoke `swayidle` with `-w` switch, or it will behave poorly.
 exec-once=swayidle
