--- a/.config/yadm/ansible/roles/gaming/tasks/packages/archlinux.yml
+++ b/.config/yadm/ansible/roles/gaming/tasks/packages/archlinux.yml
@@ -2,6 +2,7 @@
 - name: Install packages
   community.general.pacman:
     name:
+      - gamemode
       - mangohud
       - steam
       - vulkan-tools
