feat(tmux): fix / improve configuration

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,4 +1,3 @@
-
 # ████████╗███╗   ███╗██╗   ██╗██╗  ██╗
 # ╚══██╔══╝████╗ ████║██║   ██║╚██╗██╔╝
 #    ██║   ██╔████╔██║██║   ██║ ╚███╔╝
@@ -12,7 +11,7 @@
 ###   Clear all default keybinds   ###
 ################################################################################
 unbind -a
-unbind -a -T prefix
+# unbind -a -T prefix  # Not needed anymore?
 unbind -a -T root
 unbind -a -T copy-mode
 unbind -a -T copy-mode-vi
