feat(gamemode): implement gpu-screen-recorder

--- a/.config/gamemode.ini
+++ b/.config/gamemode.ini
@@ -89,7 +89,9 @@ inhibit_screensaver=1
 ; Custom scripts (executed using the shell) when gamemode starts and ends
 start=notify-send -u low "GameMode started"
 start=pkill --signal SIGUSR1 gammastep
+start=systemctl --user start gpu-screen-recorder.service
 
+end=systemctl --user stop gpu-screen-recorder.service
 end=pkill --signal SIGUSR1 gammastep
 end=notify-send -u low "GameMode ended"
 
