--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -148,8 +148,8 @@ binde=,XF86AudioLowerVolume,exec,amixer -q set Master 5%-
 binde=,XF86AudioRaiseVolume,exec,amixer -q set Master 5%+
 
 # Screenshots and Recordings
-bind=SUPERSHIFT,R,exec,record_screen.sh
 bind=,Print,exec,grim -o $(hyprctl -j activeworkspace | jq -r .monitor)
+bind=SUPERSHIFT,R,exec,save-replay.sh
 
 ###########################
 ###   Workspace Rules   ###
