--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,11 +1,11 @@
-###############################################################################
-###   ██╗  ██╗██╗   ██╗██████╗ ██████╗ ██╗      █████╗ ███╗   ██╗██████╗    ###
-###   ██║  ██║╚██╗ ██╔╝██╔══██╗██╔══██╗██║     ██╔══██╗████╗  ██║██╔══██╗   ###
-###   ███████║ ╚████╔╝ ██████╔╝██████╔╝██║     ███████║██╔██╗ ██║██║  ██║   ###
-###   ██╔══██║  ╚██╔╝  ██╔═══╝ ██╔══██╗██║     ██╔══██║██║╚██╗██║██║  ██║   ###
-###   ██║  ██║   ██║   ██║     ██║  ██║███████╗██║  ██║██║ ╚████║██████╔╝   ###
-###   ╚═╝  ╚═╝   ╚═╝   ╚═╝     ╚═╝  ╚═╝╚══════╝╚═╝  ╚═╝╚═╝  ╚═══╝╚═════╝    ###
-###############################################################################
+# ########################################################################### #
+# #   ██╗  ██╗██╗   ██╗██████╗ ██████╗ ██╗      █████╗ ███╗   ██╗██████╗    # #
+# #   ██║  ██║╚██╗ ██╔╝██╔══██╗██╔══██╗██║     ██╔══██╗████╗  ██║██╔══██╗   # #
+# #   ███████║ ╚████╔╝ ██████╔╝██████╔╝██║     ███████║██╔██╗ ██║██║  ██║   # #
+# #   ██╔══██║  ╚██╔╝  ██╔═══╝ ██╔══██╗██║     ██╔══██║██║╚██╗██║██║  ██║   # #
+# #   ██║  ██║   ██║   ██║     ██║  ██║███████╗██║  ██║██║ ╚████║██████╔╝   # #
+# #   ╚═╝  ╚═╝   ╚═╝   ╚═╝     ╚═╝  ╚═╝╚══════╝╚═╝  ╚═╝╚═╝  ╚═══╝╚═════╝    # #
+# ########################################################################### #
 
 # Refer to https://wiki.hyprland.org for more information.
 
@@ -83,9 +83,9 @@ dwindle {
     preserve_split = true  # You probably want this on
 }
 
-########################
-###   WINDOW RULES   ###
-########################
+# #################### #
+# #   WINDOW RULES   # #
+# #################### #
 windowrule=workspace 2,^(firefox)$
 windowrule=fullscreen,^(gamescope)$
 
@@ -96,9 +96,9 @@ windowrulev2 = idleinhibit focus,monitor: 1,fullscreen: 1
 windowrule=monitor 2,^(discord)$
 windowrule=fullscreen,^(discord)$
 
-####################
-###   KEYBINDS   ###
-####################
+# ################ #
+# #   KEYBINDS   # #
+# ################ #
 # General
 bind=SUPER,Return,exec,alacritty
 bind=SUPER,Q,killactive,
@@ -151,9 +151,9 @@ binde=,XF86AudioRaiseVolume,exec,amixer -q set Master 5%+
 bind=,Print,exec,grim -o $(hyprctl -j activeworkspace | jq -r .monitor)
 bind=SUPERSHIFT,R,exec,save-replay.sh
 
-###########################
-###   Workspace Rules   ###
-###########################
+# ####################### #
+# #   Workspace Rules   # #
+# ####################### #
 
 # Bind workspace 0 to auxilliary monitor
 workspace=DP-1,1
@@ -163,9 +163,9 @@ workspace=DP-1,4
 workspace=DP-1,5
 workspace=DP-2,10
 
-#####################
-###   Autostart   ###
-#####################
+# ################# #
+# #   Autostart   # #
+# ################# #
 exec-once=hyprpaper
 exec-once=waybar
 exec-once=mpd
