--- a/.config/yadm/ansible/roles/audio/tasks/packages/archlinux.yml
+++ b/.config/yadm/ansible/roles/audio/tasks/packages/archlinux.yml
@@ -6,5 +6,13 @@
       - pipewire-alsa
       - pipewire-jack
       - pipewire-pulse
+      - realtime-privileges
       - wireplumber
+  become: false
+
+- name: Add user to 'realtime' group
+  ansible.builtin.user:
+    name: "{{ user }}"
+    groups: realtime
+    append: true
   become: false
