--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -47,6 +47,10 @@ misc {
     disable_splash_rendering = true
 }
 
+cursor {
+    no_hardware_cursors = true
+}
+
 decoration {
     rounding=9      # Use an odd value here for perfect symmetry.
 
@@ -156,12 +160,12 @@ bind=SUPERSHIFT,R,exec,save-replay.sh
 # ####################### #
 
 # Bind workspace 0 to auxilliary monitor
-workspace=DP-1,1
-workspace=DP-1,2
-workspace=DP-1,3
-workspace=DP-1,4
-workspace=DP-1,5
-workspace=DP-2,10
+workspace = 1,  monitor:DP-1
+workspace = 2,  monitor:DP-1
+workspace = 3,  monitor:DP-1
+workspace = 4,  monitor:DP-1
+workspace = 5,  monitor:DP-1
+workspace = 10, monitor:DP-2
 
 # ################# #
 # #   Autostart   # #
